# logging

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/rotation/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
include/logging/: formatter.h  log_level.h  log_record.h  logger.h  logging.h
include/logging/helper/: datetime.h  fast_unique_ptr.hpp  log_record_data.h
include/logging/sink/: base.h  cout.h  file.h  file_template_exception.h  file_template_exception.hpp
src/: cout_handler.cpp  cout_handler.h  formatter.cpp  formatter.h  log_level.cpp  log_level.h  log_record.cpp  log_record.h  log_record_data.cpp  log_record_data.h  logger.cpp  logger.h  logging.h
src/helper/: datetime.cpp  log_record_data.cpp
src/sink/: base.cpp  base.h  cout.cpp  cout.h  file.cpp  file.h
src/sink/helpers/: convert_str.h  file_writer.cpp  file_writer.h  filename_template.cpp  filename_template.h
test/: CMakeLists.txt  fake_record_data.cpp  fake_record_data.h  file_tests.cpp  format_tests.cpp  log_record_tests.cpp  logging_tests.cpp  sink_tests.cpp
test/scripts/: gtest.cmake
tests/: CMakeLists.txt  fake_record_data.cpp  fake_record_data.h  file_tests.cpp  format_tests.cpp  handlers_tests.cpp  log_record_tests.cpp  logging_tests.cpp  sink_tests.cpp
tests/scripts/: gtest.cmake
